<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.profile.ProfileFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="661dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="70dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgPlaceHolderAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/style_border_editext"
                android:backgroundTint="@color/letra1"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="Nick"
                android:textColor="@color/letra1"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="example@example.com"
                android:textColor="@color/LetraSecundaria"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/style_border_editex2t"
                android:backgroundTint="@color/LetraSecundaria"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCambiarNick"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="50dp"
                    android:drawableLeft="@drawable/editing"
                    android:fontFamily="@font/acme"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/CambiarNick"
                    android:textColor="@color/letra1"
                    android:textSize="24sp"
                    app:drawableTint="@color/letra1" />

                <TextView
                    android:id="@+id/tvCerrarSesion"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="50dp"
                    android:drawableLeft="@drawable/exit"
                    android:fontFamily="@font/acme"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/CerrarSesión"
                    android:textColor="@color/letra1"
                    android:textSize="24sp"
                    app:drawableTint="@color/letra1" />

                <TextView
                    android:id="@+id/tvBorrarCuenta"
                    android:layout_width="350dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/style_border_editext"
                    android:backgroundTint="#FF0000"
                    android:drawableLeft="@drawable/delete"
                    android:fontFamily="@font/acme"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/BorrarPerfil"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:drawableTint="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>