<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Profile">


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/LetraPrincipal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/LetraPrincipal"
                android:onClick="news"
                app:srcCompat="@drawable/world_news__1_" />

            <ImageButton
                android:id="@+id/btnLobby"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/LetraPrincipal"
                android:onClick="Lobby"
                app:srcCompat="@drawable/lobby" />

            <ImageButton
                android:id="@+id/btnProfile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#6B4873"
                app:srcCompat="@drawable/profile" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:id="@+id/scrollProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/nav"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:background="@drawable/style_border_editext"
                android:foregroundGravity="center_vertical|center|center_horizontal"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvNick"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="Nick"
                android:textColor="@color/letra1"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="example@example.com"
                android:textColor="@color/LetraSecundaria"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/style_border_editex2t"
                android:backgroundTint="@color/LetraSecundaria"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCambiarNick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/editing"
                    android:fontFamily="@font/acme"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/CambiarNick"
                    android:textColor="@color/letra1"
                    android:textSize="16sp"
                    app:drawableTint="@color/letra1" />

                <TextView
                    android:id="@+id/tvCerrarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:drawableLeft="@drawable/exit"
                    android:fontFamily="@font/acme"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/CerrarSesión"

                    android:textColor="@color/letra1"
                    android:textSize="16sp"
                    app:drawableTint="@color/letra1" />

                <TextView
                    android:id="@+id/tvBorrarCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/style_border_editext"
                    android:backgroundTint="#FF0000"
                    android:drawableLeft="@drawable/delete"
                    android:fontFamily="@font/acme"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:onClick="borrarUsuario"
                    android:text="@string/BorrarPerfil"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    app:drawableTint="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>